package files;
public interface be_the_greatest {
    public void be_the_greatest();
}
